--- a/SSHFS/sshfsAdvanced.xib
+++ b/SSHFS/sshfsAdvanced.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1050</int>
 		<string key="IBDocument.SystemVersion">9C7010</string>
-		<string key="IBDocument.InterfaceBuilderVersion">648</string>
+		<string key="IBDocument.InterfaceBuilderVersion">649</string>
 		<string key="IBDocument.AppKitVersion">949.26</string>
 		<string key="IBDocument.HIToolboxVersion">352.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="1" id="9"/>
+			<integer value="1"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -34,12 +34,12 @@
 					<object class="NSTextField" id="863786194">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{151, 158}, {96, 22}}</string>
+						<string key="NSFrame">{{120, 116}, {74, 22}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="537489971">
 							<int key="NSCellFlags">-1804468671</int>
-							<int key="NSCellFlags2">272630784</int>
+							<int key="NSCellFlags2">-1874852864</int>
 							<string key="NSContents"/>
 							<object class="NSFont" key="NSSupport" id="313162402">
 								<string key="NSName">LucidaGrande</string>
@@ -71,7 +71,7 @@
 					<object class="NSTextField" id="556176002">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{10, 30}, {124, 17}}</string>
+						<string key="NSFrame">{{8, 31}, {100, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="467627756">
@@ -100,7 +100,7 @@
 					<object class="NSTextField" id="45189873">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{96, 160}, {38, 17}}</string>
+						<string key="NSFrame">{{70, 118}, {38, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="387916204">
@@ -113,33 +113,16 @@
 							<reference key="NSTextColor" ref="904141735"/>
 						</object>
 					</object>
-					<object class="NSTextField" id="974176271">
-						<reference key="NSNextResponder" ref="1005"/>
-						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{151, 27}, {157, 22}}</string>
-						<reference key="NSSuperview" ref="1005"/>
-						<bool key="NSEnabled">YES</bool>
-						<object class="NSTextFieldCell" key="NSCell" id="374513261">
-							<int key="NSCellFlags">-1804468671</int>
-							<int key="NSCellFlags2">272630784</int>
-							<string key="NSContents"/>
-							<reference key="NSSupport" ref="313162402"/>
-							<reference key="NSControlView" ref="974176271"/>
-							<bool key="NSDrawsBackground">YES</bool>
-							<reference key="NSBackgroundColor" ref="276582417"/>
-							<reference key="NSTextColor" ref="360809257"/>
-						</object>
-					</object>
 					<object class="NSButton" id="312178625">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{98, 94}, {151, 18}}</string>
+						<string key="NSFrame">{{71, 72}, {160, 18}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="367556294">
-							<int key="NSCellFlags">-1543373312</int>
+							<int key="NSCellFlags">-2080244224</int>
 							<int key="NSCellFlags2">0</int>
-							<string key="NSContents">Follow symlinks</string>
+							<string key="NSContents">Follow Symbolic Links</string>
 							<reference key="NSSupport" ref="313162402"/>
 							<reference key="NSControlView" ref="312178625"/>
 							<int key="NSButtonFlags">1211912703</int>
@@ -160,11 +143,11 @@
 					<object class="NSButton" id="255994399">
 						<reference key="NSNextResponder" ref="1005"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{98, 114}, {151, 18}}</string>
+						<string key="NSFrame">{{71, 92}, {151, 18}}</string>
 						<reference key="NSSuperview" ref="1005"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="208369830">
-							<int key="NSCellFlags">-1543373312</int>
+							<int key="NSCellFlags">-2080244224</int>
 							<int key="NSCellFlags2">0</int>
 							<string key="NSContents">Enable Compression</string>
 							<reference key="NSSupport" ref="313162402"/>
@@ -179,8 +162,25 @@
 							<int key="NSPeriodicInterval">25</int>
 						</object>
 					</object>
+					<object class="NSTextField" id="997793652">
+						<reference key="NSNextResponder" ref="1005"/>
+						<int key="NSvFlags">268</int>
+						<string key="NSFrame">{{120, 20}, {160, 39}}</string>
+						<reference key="NSSuperview" ref="1005"/>
+						<bool key="NSEnabled">YES</bool>
+						<object class="NSTextFieldCell" key="NSCell" id="672722931">
+							<int key="NSCellFlags">-1805517311</int>
+							<int key="NSCellFlags2">272629760</int>
+							<string key="NSContents"/>
+							<reference key="NSSupport" ref="313162402"/>
+							<reference key="NSControlView" ref="997793652"/>
+							<bool key="NSDrawsBackground">YES</bool>
+							<reference key="NSBackgroundColor" ref="276582417"/>
+							<reference key="NSTextColor" ref="360809257"/>
+						</object>
+					</object>
 				</object>
-				<string key="NSFrameSize">{350, 200}</string>
+				<string key="NSFrameSize">{300, 158}</string>
 				<reference key="NSSuperview"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -218,10 +218,10 @@
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: representedObject.parameters.advancedOptions</string>
-						<reference key="source" ref="974176271"/>
+						<reference key="source" ref="997793652"/>
 						<reference key="destination" ref="1001"/>
 						<object class="NSNibBindingConnector" key="connector">
-							<reference key="NSSource" ref="974176271"/>
+							<reference key="NSSource" ref="997793652"/>
 							<reference key="NSDestination" ref="1001"/>
 							<string key="NSLabel">value: representedObject.parameters.advancedOptions</string>
 							<string key="NSBinding">value</string>
@@ -245,9 +245,9 @@
 								</object>
 								<object class="NSMutableArray" key="dict.values">
 									<bool key="EncodedWithXMLCoder">YES</bool>
-									<reference ref="9"/>
+									<integer value="1" id="5"/>
 									<integer value="0" id="6"/>
-									<reference ref="9"/>
+									<reference ref="5"/>
 									<reference ref="6"/>
 									<reference ref="6"/>
 									<reference ref="6"/>
@@ -255,14 +255,46 @@
 									<string/>
 									<string/>
 									<string>None specified</string>
-									<reference ref="9"/>
+									<reference ref="5"/>
 									<reference ref="6"/>
 								</object>
 							</object>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">32</int>
+					<int key="connectionID">48</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: representedObject.parameters.compression</string>
+						<reference key="source" ref="255994399"/>
+						<reference key="destination" ref="1001"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="255994399"/>
+							<reference key="NSDestination" ref="1001"/>
+							<string key="NSLabel">value: representedObject.parameters.compression</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">representedObject.parameters.compression</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">51</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: representedObject.parameters.followSymlinks</string>
+						<reference key="source" ref="312178625"/>
+						<reference key="destination" ref="1001"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="312178625"/>
+							<reference key="NSDestination" ref="1001"/>
+							<string key="NSLabel">value: representedObject.parameters.followSymlinks</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">representedObject.parameters.followSymlinks</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">53</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -299,10 +331,10 @@
 						<reference key="object" ref="1005"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="863786194"/>
-							<reference ref="556176002"/>
 							<reference ref="45189873"/>
-							<reference ref="974176271"/>
+							<reference ref="997793652"/>
+							<reference ref="556176002"/>
+							<reference ref="863786194"/>
 							<reference ref="312178625"/>
 							<reference ref="255994399"/>
 						</object>
@@ -320,6 +352,9 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
 						<reference key="object" ref="537489971"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+						</object>
 						<reference key="parent" ref="863786194"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -365,15 +400,6 @@
 						<reference key="parent" ref="312178625"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">23</int>
-						<reference key="object" ref="974176271"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="374513261"/>
-						</object>
-						<reference key="parent" ref="1005"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
 						<reference key="object" ref="556176002"/>
 						<object class="NSMutableArray" key="children">
@@ -388,14 +414,23 @@
 						<reference key="parent" ref="556176002"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">26</int>
-						<reference key="object" ref="374513261"/>
-						<reference key="parent" ref="974176271"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">27</int>
 						<reference key="object" ref="817358446"/>
 						<reference key="parent" ref="1002"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">44</int>
+						<reference key="object" ref="997793652"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="672722931"/>
+						</object>
+						<reference key="parent" ref="1005"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">45</int>
+						<reference key="object" ref="672722931"/>
+						<reference key="parent" ref="997793652"/>
 					</object>
 				</object>
 			</object>
@@ -413,12 +448,12 @@
 					<string>1.WindowOrigin</string>
 					<string>1.editorWindowContentRectSynchronizationRect</string>
 					<string>2.IBPluginDependency</string>
-					<string>23.IBPluginDependency</string>
 					<string>24.IBPluginDependency</string>
 					<string>25.IBPluginDependency</string>
-					<string>26.IBPluginDependency</string>
 					<string>3.IBPluginDependency</string>
 					<string>4.IBPluginDependency</string>
+					<string>44.IBPluginDependency</string>
+					<string>45.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
 					<string>7.IBPluginDependency</string>
@@ -430,10 +465,10 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilderKit</string>
 					<string>com.apple.InterfaceBuilderKit</string>
-					<string>{{266, 409}, {350, 200}}</string>
+					<string>{{500, 451}, {300, 158}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<integer value="1" id="5"/>
-					<reference ref="5"/>
+					<reference ref="6"/>
+					<reference ref="6"/>
 					<string>{628, 654}</string>
 					<string>{{264, 790}, {300, 150}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -470,7 +505,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">43</int>
+			<int key="maxID">53</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
